# Chip-8-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  emulator.c  main.c
Chip-8-Emulator/: audio.c  audio.cpp  emulator.c  filehandler.c  main.c
Chip-8-Emulator/include/: audio.hpp  main.h
